--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 GOOGLE_BOOKS_API_KEY=AIzaSyDlb7RCLinjwtavgyA9lQVCN2MPTAwgjpk
+DATABASE_URL=postgresql://Arfaoui-ghaith:xdyjHobBQ1z7@ep-square-tree-14148973.us-east-2.aws.neon.tech/bookstore?sslmode=require
